--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,12 @@
         #root {
             padding: 0;
             margin: 0;
-            background-color: #FFFBF7;
+            background-color: #e7e7e7;
             overflow: hidden !important;
         }
     </style>
     <link href="/styling/main.sass" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/fonts/league-spartan.css">
 
 <body>
